--- a/themes/hugo-theme-prav/layouts/index.html
+++ b/themes/hugo-theme-prav/layouts/index.html
@@ -2,8 +2,8 @@
 {{ $paginator := .Paginate (where .Site.RegularPages "Type" "in" .Site.Params.mainSections) 10 }}
 
 <div id="content" class="pure-u-1 pure-u-md-3-4 pure-u-sm-1">
-    <h1 style="text-align: center; margin: 0;">
-        Recent Posts (page {{ $paginator.PageNumber }} / {{ $paginator.TotalPages }})
+    <h1 style="text-align: center; margin: 0; font-size: x-large;">
+        記事一覧 (page {{ $paginator.PageNumber }} / {{ $paginator.TotalPages }})
     </h1>
 
     {{ range .Paginator.Pages }}
@@ -12,8 +12,7 @@
     <div class="pad">
         {{- partial "render_single_article.html" . -}}
     </div>
-    <div class="pad"></div>
-
+    
     {{ end }}
 
     <div class="pagination">
