--- a/themes/hugo-theme-prav/static/css/style.css
+++ b/themes/hugo-theme-prav/static/css/style.css
@@ -138,6 +138,7 @@ section.toc h3 {
     text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     font-size: 0.8em;
     padding-right: 1em;
+    float: right;
 }
 
 .tags {
