TOP変更取り消し

--- a/themes/hugo-theme-prav/layouts/index.html
+++ b/themes/hugo-theme-prav/layouts/index.html
@@ -12,6 +12,7 @@
     <div class="pad">
         {{- partial "render_single_article.html" . -}}
     </div>
+    <div class="pad"></div>
     
     {{ end }}
 
