--- a/themes/hugo-theme-prav/layouts/index.html
+++ b/themes/hugo-theme-prav/layouts/index.html
@@ -10,7 +10,7 @@
 
     {{ .Scratch.Set "isMainPage" "true" }}
     <div class="pad">
-        {{- partial "render_single_article.html" . -}}
+        {{- partial "render_article_list.html" . -}}
     </div>
     <div class="pad"></div>
     
