--- a/themes/hugo-theme-prav/layouts/partials/render_article_list.html
+++ b/themes/hugo-theme-prav/layouts/partials/render_article_list.html
@@ -5,15 +5,15 @@
 {{ end }}
 <article>
     {{ if eq (.Scratch.Get "isMainPage") "true"  -}}
-    <h4> <a href="{{ .Permalink }}">{{ .Title }}</a></h4>
+    <h4> 
+        {{ range .Params.categories }}
+        {{ $name := . }}
+        <a href="/tags/{{ $name | urlize }}" >【{{ $name }}】 &nbsp; - &nbsp;</a>
+        {{ end }}
+        <a href="{{ .Permalink }}">{{ .Title }}</a>
+    </h4>
     {{ else -}}
     <h4><a href="{{ .Permalink }}">{{ .Title }}</a></h4>
     {{- end -}}
-    <div class="tags">
-        {{ range .Params.tags }}
-        {{ $name := . }}
-        <a href="/tags/{{ $name | urlize }}" class="pure-button">{{ $name }}</a>
-        {{ end }}
-    </div>
     
 </article>
