--- a/themes/hugo-theme-prav/layouts/partials/menu.html
+++ b/themes/hugo-theme-prav/layouts/partials/menu.html
@@ -25,6 +25,12 @@
                 About
             </a>
         </li>
+        <li class="pure-menu-item">
+            <a href="https://3ops.kanoe.studio" class="pure-menu-link">
+                <i class="fas fa-smile"></i>
+                Music
+            </a>
+        </li>
     </ul>
     <ul class="pure-menu-list pull-right">
 
