--- a/themes/hugo-theme-prav/layouts/partials/header.html
+++ b/themes/hugo-theme-prav/layouts/partials/header.html
@@ -55,11 +55,11 @@
     {{ end -}}
 
     <!-- This block handles relative paths to the preview image -->
-    {{- if .File.Dir -}}
+    {{- if and .File .File.Dir -}}
     {{ if not (hasPrefix $imageLink "/") -}}
-    {{ $imageLink = path.Join .File.Dir $imageLink -}}
+      {{ $imageLink = path.Join .File.Dir $imageLink -}}
     {{ end -}}
-    {{ end -}}
+    {{- end -}}  
 
     {{ "<!-- OpenGraph/Twitter Specific Stuff-->" | safeHTML }}
     <meta name="twitter:card" content="summary">
