--- a/themes/hugo-theme-prav/layouts/404.html
+++ b/themes/hugo-theme-prav/layouts/404.html
@@ -1,5 +1,6 @@
 {{ define "main" }}
+{{ partial "header.html" .Site.Params }}
 <center class="pure-u-1 pure-u-md-1 pure-u-sm-1">
-Page not found
+  Page not found
 </center>
 {{ end }}
