--- a/themes/hugo-theme-prav/layouts/partials/menu.html
+++ b/themes/hugo-theme-prav/layouts/partials/menu.html
@@ -39,50 +39,50 @@
             {{ partial "custom_menu.html" . }}
         </li>
 
-        {{ if .Site.Social.mastodon }}
+        {{ if .Site.Params.Social.mastodon }}
         <li class="pure-menu-item">
-            <a rel="me" href="{{ .Site.Social.mastodon }}" title="Mastodon" class="pure-menu-link">
+            <a rel="me" href="{{ .Site.Params.Social.mastodon }}" title="Mastodon" class="pure-menu-link">
                 <i class="fab fa-mastodon"></i>
                 <span class="hide">Mastodon</span>
             </a>
         </li>
         {{ end }}
 
-        {{ if .Site.Social.github }}
+        {{ if .Site.Params.Social.github }}
         <li class="pure-menu-item">
-            <a href="{{ .Site.Social.github }}" title="Github" class="pure-menu-link">
+            <a href="{{ .Site.Params.Social.github }}" title="Github" class="pure-menu-link">
                 <i class="fab fa-github"></i>
                 <span class="hide">Github</span>
             </a>
         </li>
         {{ end }}
-        {{ if .Site.Social.twitter }}
+        {{ if .Site.Params.Social.twitter }}
         <li class="pure-menu-item">
-            <a href="{{ .Site.Social.twitter }}" title="Twitter" class="pure-menu-link">
+            <a href="{{ .Site.Params.Social.twitter }}" title="Twitter" class="pure-menu-link">
                 <i class="fab fa-twitter-square"></i>
                 <span class="hide">Twitter</span>
             </a>
         </li>
         {{ end }}
-        {{ if .Site.Social.linkedin }}
+        {{ if .Site.Params.Social.linkedin }}
         <li class="pure-menu-item">
-            <a href="{{ .Site.Social.linkedin }}" title="Linked In" class="pure-menu-link">
+            <a href="{{ .Site.Params.Social.linkedin }}" title="Linked In" class="pure-menu-link">
                 <i class="fab fa-linkedin"></i>
                 <span class="hide">LinkedIn</span>
             </a>
         </li>
         {{ end }}
-        {{ if .Site.Social.medium }}
+        {{ if .Site.Params.Social.medium }}
         <li class="pure-menu-item">
-            <a href="{{ .Site.Social.medium }}" title="Medium" class="pure-menu-link">
+            <a href="{{ .Site.Params.Social.medium }}" title="Medium" class="pure-menu-link">
                 <i class="fab fa-medium"></i>
                 <span class="hide">Medium</span>
             </a>
         </li>
         {{ end }}
-        {{ if .Site.Social.facebook }}
+        {{ if .Site.Params.Social.facebook }}
         <li class="pure-menu-item">
-            <a href="{{ .Site.Social.facebook }}" title="Facebook" class="pure-menu-link">
+            <a href="{{ .Site.Params.Social.facebook }}" title="Facebook" class="pure-menu-link">
                 <i class="fab fa-facebook"></i>
                 <span class="hide">Facebook</span>
             </a>
