add develop page

--- a/themes/hugo-theme-prav/layouts/partials/menu.html
+++ b/themes/hugo-theme-prav/layouts/partials/menu.html
@@ -26,6 +26,12 @@
             </a>
         </li>
         <li class="pure-menu-item">
+            <a href="/develop" class="pure-menu-link">
+                <i class="fas fa-code"></i>
+                Develop
+            </a>
+        </li>
+        <li class="pure-menu-item">
             <a href="https://3ops.kanoe.studio" class="pure-menu-link">
                 <i class="fas fa-smile"></i>
                 Music
